[gd_scene load_steps=16 format=3 uid="uid://cxe5633dur6i"]

[ext_resource type="Theme" uid="uid://71s8qqtby4qf" path="res://Design/Themes/AmeliorationBore/AmeliorationBoreTheme.tres" id="1_8ywco"]
[ext_resource type="Script" path="res://Script/AmeliorationBore/ButtonClassicAmeliorationBore.gd" id="1_b3nrj"]
[ext_resource type="Theme" uid="uid://c2oksi2eb0sxy" path="res://Design/Themes/themeTest.tres" id="2_60yia"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivxgt"]
bg_color = Color(0.317647, 0.317647, 0.317647, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6u4h"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.145098, 0.145098, 0.145098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6g8x6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvspp"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.118581, 0.118581, 0.118581, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_01uko"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e87xp"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.466667, 0.466667, 0.466667, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h4qhm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_djgbq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a5l75"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gslfr"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qiuka"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h62kh"]
bg_color = Color(0.611765, 0.611765, 0.611765, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="ButtonClassicAmeliorationBore" type="Control"]
custom_minimum_size = Vector2(320, 380)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8ywco")
script = ExtResource("1_b3nrj")

[node name="PresentationPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ivxgt")

[node name="PresentationVBoxC" type="VBoxContainer" parent="PresentationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NomMarginC" type="MarginContainer" parent="PresentationPanel/PresentationVBoxC"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="PanelC" type="PanelContainer" parent="PresentationPanel/PresentationVBoxC/NomMarginC"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g6u4h")

[node name="MarginC" type="MarginContainer" parent="PresentationPanel/PresentationVBoxC/NomMarginC/PanelC"]
layout_mode = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 3

[node name="NomLabel" type="Label" parent="PresentationPanel/PresentationVBoxC/NomMarginC/PanelC/MarginC"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_6g8x6")
text = "Nom"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MidMarginC" type="MarginContainer" parent="PresentationPanel/PresentationVBoxC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="FondDescriptionPanel" type="Panel" parent="PresentationPanel/PresentationVBoxC/MidMarginC"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yvspp")

[node name="DescriptionMarginC" type="MarginContainer" parent="PresentationPanel/PresentationVBoxC/MidMarginC"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxC" type="VBoxContainer" parent="PresentationPanel/PresentationVBoxC/MidMarginC/DescriptionMarginC"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="PresentationPanel/PresentationVBoxC/MidMarginC/DescriptionMarginC/VBoxC"]
layout_mode = 2
size_flags_vertical = 3
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LinePanel" type="Panel" parent="PresentationPanel/PresentationVBoxC/MidMarginC/DescriptionMarginC/VBoxC"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_01uko")

[node name="BonusMarginC" type="MarginContainer" parent="PresentationPanel/PresentationVBoxC/MidMarginC/DescriptionMarginC/VBoxC"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="FondBonusPanel" type="Panel" parent="PresentationPanel/PresentationVBoxC/MidMarginC/DescriptionMarginC/VBoxC/BonusMarginC"]
layout_mode = 2

[node name="MarginC" type="MarginContainer" parent="PresentationPanel/PresentationVBoxC/MidMarginC/DescriptionMarginC/VBoxC/BonusMarginC/FondBonusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BonusLabel" type="Label" parent="PresentationPanel/PresentationVBoxC/MidMarginC/DescriptionMarginC/VBoxC/BonusMarginC/FondBonusPanel/MarginC"]
layout_mode = 2
text = "Bonus Am√©lioration"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotMarginC" type="MarginContainer" parent="PresentationPanel/PresentationVBoxC"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="PresentationPanel/PresentationVBoxC/BotMarginC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_e87xp")

[node name="HBoxC" type="HBoxContainer" parent="PresentationPanel/PresentationVBoxC/BotMarginC/PanelContainer"]
layout_mode = 2

[node name="NiveauMarginC" type="MarginContainer" parent="PresentationPanel/PresentationVBoxC/BotMarginC/PanelContainer/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="NiveauLabel" type="Label" parent="PresentationPanel/PresentationVBoxC/BotMarginC/PanelContainer/HBoxC/NiveauMarginC"]
layout_mode = 2
text = "Niveau"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrixContainer" type="MarginContainer" parent="PresentationPanel/PresentationVBoxC/BotMarginC/PanelContainer/HBoxC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="PrixLabel" type="Label" parent="PresentationPanel/PresentationVBoxC/BotMarginC/PanelContainer/HBoxC/PrixContainer"]
layout_mode = 2
text = "Prix"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxEmpty_h4qhm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_djgbq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a5l75")

[node name="PanelForUnlock" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gslfr")

[node name="FondPanel" type="Panel" parent="PanelForUnlock"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qiuka")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelForUnlock/FondPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="AmeliorationBoreUnlockButton" type="Button" parent="PanelForUnlock/FondPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_60yia")
theme_override_styles/normal = SubResource("StyleBoxFlat_h62kh")
text = "Unlock"

[node name="AtomeLabel" type="Label" parent="PanelForUnlock/FondPanel/VBoxContainer"]
layout_mode = 2
text = "Atome"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrixLabel" type="Label" parent="PanelForUnlock/FondPanel/VBoxContainer"]
layout_mode = 2
text = "Prix"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelForUnlock/FondPanel/VBoxContainer/AmeliorationBoreUnlockButton" to="." method="_on_amelioration_bore_unlock_button_pressed"]
